--- a/index.html
+++ b/index.html
@@ -1,15 +1,2 @@
-<html>
 
-  <head>
-
-    <title>Hello, World!</title>
-
-  </head>
-
-  <body>
-
-    HI!!!!!!!! :P ugyugy
-
-  </body>
-
-</html>
+<html>  <head>    <title>Hello, World!</title>  </head>  <body>    Leddle Leedle Lee  </body></html>
