--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-
-<html>  <head>    <title>Hello, World!</title>  </head>  <body>    Leddle Leedle Lee  </body></html>
+<html>  <head>    <title>Hello, World!</title>  </head>  <body>   This is my page, YO!  </body></html>
