--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       var BALL_RADIUS = 10;
 
       // Color of the ball
-      var BALL_COLOR = "#Purple";
+      var BALL_COLOR = "#Purple#";
 
       // The x and y position of the ball. Start in the center
       var ballX = CANVAS_WIDTH / 2;
