--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
       {
         context.beginPath();
         context.rect(leftPaddle_x,leftPaddle_y,paddle_Width,paddle_Height);
-        context.fillStyle = "black";
+        context.fillStyle = "Green";
         
         context.fill();
 
         context.beginPath();
         context.rect(rightPaddle_x,rightPaddle_y,paddle_Width,paddle_Height);
-        context.fillStyle = "black";
+        context.fillStyle = "lime Green";
         
         context.fill();
       }
@@ -113,10 +113,10 @@
         border-left-width: 2px;
         border-bottom-width: 2px;
         border-right-width: 2px;
-        border-top-color: black;
-        border-left-color: black;
-        border-bottom-color: black;
-        border-right-color: black;
+        border-top-color: pink;
+        border-left-color: pink;
+        border-bottom-color: pink;
+        border-right-color: pink;
         border-top-style: solid;
         border-left-style: solid;
         border-bottom-style: solid;
