--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         context.beginPath();
         context.rect(rightPaddle_x,rightPaddle_y,paddle_Width,paddle_Height);
-        context.fillStyle = "lime Green";
+        context.fillStyle = "Purple";
         
         context.fill();
       }
