--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       {
         context.beginPath();
         context.rect(leftPaddle_x,leftPaddle_y,paddle_Width,paddle_Height);
-        context.fillStyle = "Green";
+        context.fillStyle = "Purple";
         
         context.fill();
 
