--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>The Game of Pong</title>
+    <title>This is Pong, yo!</title>
     <script type="text/javascript">
       // Time in milliseconds before next refresh
       var REFRESH_TIME = 10;
@@ -117,7 +117,7 @@
         border-left-color: pink;
         border-bottom-color: pink;
         border-right-color: pink;
-        border-top-style: solid;
+        border-top-style: wide;
         border-left-style: solid;
         border-bottom-style: solid;
         border-right-style: solid;
