--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         border-left-color: pink;
         border-bottom-color: pink;
         border-right-color: pink;
-        border-top-style: wide;
+        border-top-style: solid;
         border-left-style: solid;
         border-bottom-style: solid;
         border-right-style: solid;
