--- a/index.html
+++ b/index.html
@@ -1,62 +1,17 @@
+<!doctype html>
+
 <html>
 
-<head>
+ <head>
 
-    <title>Hello World</title>
+ <title>May 11 Assignments</title>
 
-</head>
+ </head>
 
-<body>
+ <body>
 
-    <script type="text/javascript">
+ <h1>HELLO THERE!</h1>
 
-         document.write("<h1> assignment 1 </h1>");
+ </body>
 
-        for(var x = 1 ; x <= 100 ; x++)
-
-        {
-
-            document.write(x);
-
-            document.write("</br>");
-
-        }
-
-        document.write("<h1> assignment 2 </h1>");
-
-        for(x = 2 ; x <= 10 ; x+=2)
-
-        {
-
-            document.write(x);
-
-            document.write("</br>");
-
-        }
-
-        document.write("<h1> assignment 3 </h1>");
-
-        for(var y = 1 ; y <= 12 ; y++)
-
-        {
-
-            for(var x = 1 ; x <= 12 ; x++)
-
-            {
-
-                document.write(x*y);
-                document.write(" ");
-
-
-
-            }
-
-            document.write("</br>");
-
-        }
-
-
-    </script>
-
-</body>
 </html>
